Minor updates for production